--- a/migration_to_TypeScript/src/global.css
+++ b/migration_to_TypeScript/src/global.css
@@ -1,6 +1,6 @@
 body {
     color: #fff;
-    background: #17181c;
+    background: #adb8e7;
     font-family: sans-serif;
 }
 
@@ -19,17 +19,28 @@ footer {
     align-items: center;
     justify-content: center;
 }
+
 footer .copyright {
     font-size: 14px;
     color: #333;
     text-align: center;
+
 }
+
+footer .logo_rs img {
+    width: 10em;
+    align-items: center;
+    margin: 0px 35px;
+}
+
 footer .copyright a {
     color: #444;
 }
+
 footer .copyright a:hover {
     color: #555;
 }
+
 footer .copyright:before {
     content: '©';
 }
